load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_Nov0cx_fmt",
    sha256 = "3882d99514ceae01c9c09e8e99fb1a7921a6e1e8d12c6cc1606471c2326a5a91",
    strip_prefix = "fmt-master",
    urls = ["https://github.com/Nov0cx/fmt/archive/master.zip"],
)
